src/app/home/category-card/category-card.component.css
.card {
  border-radius: 20px;
  margin: 1rem;
}

.card:hover {
  transform: scale(1.01);
  animation: transform 0.7s ease;
}

.card-title {
  font-size: larger;
}

.card-img-top {
  width: 100%;
  height: 35vh;
  object-fit: cover;
}

img {
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}

button {
  border-radius: 1rem;
  outline: none;
  border: none;
  padding: 0.3rem 2rem;
}

